src/objects/CourseEnrolled__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Enrolled</relationshipLabel>
        <relationshipName>Course_Enrolled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Enrolled</relationshipLabel>
        <relationshipName>Course_Enrolled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Enrolled</relationshipLabel>
        <relationshipName>Course_Enrolled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>Course__r.Institution__r.Name</formula>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
                <value>
                    <fullName>Oxford</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Edinburgh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Course Enrolled</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Institution__c</columns>
        <columns>Course__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FutureSkills_Queue_CourseEnrolled</fullName>
        <filterScope>Queue</filterScope>
        <label>FutureSkills Queue</label>
        <queue>FutureSkills_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Course Enrolled ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrolled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>